@@ -7,7 +7,8 @@ jobs:
       matrix:
         config:
         - ["plone52-py27", "plone/test-with-tox:5.2-2.7"]
-    runs-on: ubuntu-20.04
+        - ["plone52-py38", "plone/test-with-tox:5.2-3.8"]
+    runs-on: ubuntu-22.04
     container:
       image: ${{ matrix.config[1] }}
     name: ${{ matrix.config[0] }}
@@ -21,15 +22,16 @@ jobs:
       matrix:
         config:
         # [Python version, tox env]
-        - ["3.6",   "plone52-py36"]
-        - ["3.7",   "plone52-py37"]
-        - ["3.8",   "plone52-py38"]
-        - ["3.8",   "plone60-py38"]
+        # - ["3.6",   "plone52-py36"]
+        # - ["3.7",   "plone52-py37"]
+        # - ["3.8",   "plone60-py38"]
         - ["3.9",   "plone60-py39"]
         - ["3.10",  "plone60-py310"]
         - ["3.11",  "plone60-py311"]
+        - ["3.12",  "plone60-py312"]
+        - ["3.13",  "plone60-py313"]
     name: ${{ matrix.config[1] }}
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python
