@@ -1,0 +1,1 @@
+setuptools<80.8.0
