@@ -1,5 +1,3 @@
-# For Buildout related packages, it is easiest to keep them at the same version for all environments.
-# Keep these in sync with base.cfg please:
-zc.buildout==3.0.1
-# setuptools 67 is too strict with versions
-setuptools<67
+horse-with-no-namespace
+zc.buildout
+-c buildout-constraints.txt
