@@ -13,4 +13,4 @@ zope_push = git@github.com:zopefoundation
 
 [sources]
 collective.plonefinder = git ${remotes:collective}/collective.plonefinder.git pushurl=${remotes:collective_push}/collective.plonefinder.git branch=plone5
-collective.quickupload = git ${remotes:collective}/collective.quickupload.git pushurl=${remotes:collective_push}/collective.quickupload.git branch=plone5
+collective.quickupload = git ${remotes:collective}/collective.quickupload.git pushurl=${remotes:collective_push}/collective.quickupload.git branch=master
