@@ -2,6 +2,7 @@
 extends =
     https://raw.githubusercontent.com/collective/buildout.plonetest/master/pytest-5.2.x.cfg
     base.cfg
+    versions-recent.cfg
 
 [plonesite]
 recipe = collective.recipe.plonesite
@@ -40,4 +41,4 @@ robotsuite = 2.3.1
 
 [sources]
 collective.plonefinder = git ${remotes:collective}/collective.plonefinder.git pushurl=${remotes:collective_push}/collective.plonefinder.git branch=plone5
-collective.quickupload = git ${remotes:collective}/collective.quickupload.git pushurl=${remotes:collective_push}/collective.quickupload.git branch=plone5
+collective.quickupload = git ${remotes:collective}/collective.quickupload.git pushurl=${remotes:collective_push}/collective.quickupload.git branch=master
