@@ -2,6 +2,7 @@
 extends =
     https://raw.githubusercontent.com/collective/buildout.plonetest/master/pytest-6.0.x.cfg
     base.cfg
+    versions-recent.cfg
 auto-checkout=
     collective.plonefinder
     collective.quickupload
@@ -24,4 +25,4 @@ wheel = 0.38.4
 
 [sources]
 collective.plonefinder = git ${remotes:collective}/collective.plonefinder.git pushurl=${remotes:collective_push}/collective.plonefinder.git branch=plone5
-collective.quickupload = git ${remotes:collective}/collective.quickupload.git pushurl=${remotes:collective_push}/collective.quickupload.git branch=plone5
+collective.quickupload = git ${remotes:collective}/collective.quickupload.git pushurl=${remotes:collective_push}/collective.quickupload.git branch=master
