@@ -2,7 +2,7 @@
 minversion = 3.18
 envlist =
     plone52-py{27,36,37,38}
-    plone60-py{38,39,310,311}
+    plone60-py{38,39,310,311,312,313}
 
 [testenv]
 # We do not install with pip, but with buildout:
