@@ -1,0 +1,7 @@
+[versions]
+zc.buildout =
+packaging =
+setuptools =
+pip =
+wheel =
+mr.developer = 2.0.4
